--- a/streaming.ipynb
+++ b/streaming.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "#### Cleaning Data\n",
     "Function clean_tweets accepts a DataFrame as input.  \n",
-    "Cleans text in tweet column of all links, hashtags, mentioned users, as well as several punctuation marks.  \n",
+    "Cleans text in tweet column of all links, hashtags, mentioned users, as well as punctuation marks.  \n",
     "Returns updated DataFrame.  "
    ],
    "metadata": {}
