--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -55,7 +55,8 @@
     "except KeyboardInterrupt:\n",
     "    print('Interrupted')\n",
     "    c_socket.close()\n",
-    "    s_socket.close()"
+    "    s_socket.close()\n",
+    "    "
    ],
    "outputs": [],
    "metadata": {}
